@@ -11,7 +11,7 @@ c0: -4
 skew: 1
 lss: 1
 knowndiv: 93569
-mrif: 2
+mrif: 4
 
 rlim: 300000
 alim: 350000
